--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,14 +23,14 @@ jobs:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'devs'
     runs-on: ubuntu-latest
     steps:
-      - name: Print message for merge to main
+      - name: Merged from devs branch to main!
         run: |
-          echo "Merged from feature or dev branch to main!"
+          echo "Merged from devs branch to main!"
 
   from_feature_to_main:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.base.ref == 'feature'
     runs-on: ubuntu-latest
     steps:
-      - name: Print message for merge to main
+      - name: Merged from feature branch to main!
         run: |
-          echo "Merged from feature or dev branch to main!"
+          echo "Merged from feature branch to main!"
