--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,10 +21,20 @@ jobs:
           echo Event Pull Request ${{ github.event.pull_request }}
           echo Event Pull Request Base ${{ github.event.pull_request.base }}
           echo Event Pull Request Base Ref ${{ github.event.pull_request.base.ref }}
-          echo Event Pull Request Base Ref ${{ github.event.pull_request.head.ref }}
+          echo Event Pull Request Head Ref ${{ github.event.pull_request.head.ref }}
+
+  only_merged:
+    # if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'devs'
+    if: github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'devs'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Only Merged!
+        run: |
+          echo "Only Merged!"
 
   from_devs_to_main:
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'devs'
+    # if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'devs'
+    if: github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'devs'
     runs-on: ubuntu-latest
     steps:
       - name: Merged from devs branch to main!
@@ -32,7 +42,8 @@ jobs:
           echo "Merged from devs branch to main!"
 
   from_feature_to_main:
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.base.ref == 'feature'
+    # if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.base.ref == 'feature'
+    if: github.event.pull_request.base.ref == 'main' && github.event.pull_request.base.ref == 'feature'
     runs-on: ubuntu-latest
     steps:
       - name: Merged from feature branch to main!
